syntax = "proto3";
package nolus.suspend.v1beta1;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "gitlab-nomo.credissimo.net/nomo/cosmzone/x/suspend/types";

// Msg defines the Msg service.
service Msg {
      rpc ChangeSuspended(MsgChangeSuspended) returns (MsgChangeSuspendedResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgChangeSuspended {
  string from_address = 1;
  bool suspended = 2;
  int64 block_height = 3;
}

message MsgChangeSuspendedResponse {
}

// this line is used by starport scaffolding # proto/tx/message
