syntax = "proto3";
package nomo.cosmzone.suspend;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "gitlab-nomo.credissimo.net/nomo/cosmzone/x/suspend/types";

// Msg defines the Msg service.
service Msg {
      rpc ChangeSuspend(MsgChangeSuspend) returns (MsgChangeSuspendResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgChangeSuspend {
  string from_address = 1;
  bool suspend = 2;
  int64 block_height = 3;
  string admin_key = 4;
}

message MsgChangeSuspendResponse {
}

// this line is used by starport scaffolding # proto/tx/message
